--- a/views/index/signIn.pug
+++ b/views/index/signIn.pug
@@ -20,9 +20,9 @@ block body
 							.col-12
 								label.form-label.text-body.fs-8(for='password') Mot de passe
 								.input-group.input-group-sm
-									input#password.form-control(type='password' name='password' placeholder='Mot de passe' aria-label='password' aria-describedby='show-password' required)
+									input.form-control(type='password' name='password' placeholder='Mot de passe' aria-label='password' aria-describedby='show-password' required)
 									.invalid-feedback.fs-8.mt-4
-									button#show-password.input-group-text.bg-transparent(type='button')
+									button.show-password.input-group-text.bg-transparent(type='button')
 										ion-icon(name='eye-outline')
 							//- .col-12
 								a.text-decoration-none.fs-8(href="/forgot-password") Mot de passe oublié ?
