--- a/views/csr/changePassword.pug
+++ b/views/csr/changePassword.pug
@@ -1,19 +1,52 @@
 extends profile
 
 block tail
+	script(type="module" src="/../../js/util/changePassword.js")
+	script(type="module" src="/../../js/index/signIn.js")
 
 block main
 	.row.g-3
 		.col-12
-			span.fs-7.bg-grd.fw-bold.px-2.py-1.rounded Paramètres
-		.col-lg-6
-				label.form-label.fs-7(for='email') Email address
-				input#email.form-control.form-control-sm(type='email' placeholder='name@example.com' value=data.document.email disabled)
+			include ../util/snippet/titleChangePassword
 		.col-12
-			button.btn.btn-primary.btn-sm Éditez
-		.col-lg-6
-				label.form-label.fs-7(for='password') mot de passe
-				input#password.mb-2.form-control.form-control-sm(type='password' placeholder='tapez le mot de passe' value='......' disabled)
-				input.form-control.form-control-sm(type='password' placeholder='re-tapez le mot de passe' value='......' disabled)
-		.col-12
-			button.btn.btn-primary.btn-sm changez le mot de passe
+			.card.card-body
+				form(action=url method="post") 
+					.row.g-3
+						.col-12
+							.d-flex.align-items-center.mb-2
+								.d-flex.align-items-center.me-2
+									<ion-icon name="ellipse" class="text-1 me-1 fs-9"></ion-icon>
+									.badge.p-0.text-dark.fs-7 Ancien mot de passe
+								hr.my-1.w-100
+							.row.g-3
+								.col-md-6
+									label.form-label.fs-7.text-dark(for='oldPassword') Veuillez saisir l'ancien mot de passe
+									.input-group.input-group-sm
+										input#oldPassword.password.form-control(type='password' name='oldPassword' placeholder='Veuillez saisir l\'ancien mot de passe' aria-label='password' aria-describedby='show-password' required)
+										.invalid-feedback.fs-8.mt-4
+										button.show-password.input-group-text.bg-transparent(type='button')
+											ion-icon(name='eye-outline')
+						.col-12
+							.d-flex.align-items-center.mb-2
+								.d-flex.align-items-center.me-2
+									<ion-icon name="ellipse" class="text-1 me-1 fs-9"></ion-icon>
+									.badge.p-0.text-dark.fs-7 Nouveau mot de passe
+								hr.my-1.w-100
+							.row.g-3
+								.col-md-6
+									label.form-label.fs-7.text-dark(for='password') Veuillez saisir le nouveau mot de passe
+									.input-group.input-group-sm
+										input#newPassword.password.form-control(type='password' name='newPassword' placeholder='Veuillez saisir le nouveau mot de passe' aria-label='password' aria-describedby='show-password' required)
+										.invalid-feedback.fs-8.mt-4
+										button.show-password.input-group-text.bg-transparent(type='button')
+											ion-icon(name='eye-outline')
+
+								.col-md-6
+									label.form-label.fs-7.text-dark(for='password') Veuillez confirmer le nouveau mot de passe
+									.input-group.input-group-sm
+										input#newPasswordCheck.password.form-control(type='password' placeholder='Veuillez confirmer le nouveau mot de passe' aria-label='password' aria-describedby='show-password' required)
+										.invalid-feedback.fs-8.mt-4
+										button.show-password.input-group-text.bg-transparent(type='button')
+											ion-icon(name='eye-outline')
+						.col-12
+							button.btn.bg-grd.text-white.btn-sm(type="submit") changer le mot de passe
