--- a/views/region/aside.pug
+++ b/views/region/aside.pug
@@ -104,7 +104,7 @@ aside#aside.bg-aside
 				span.fw-bold CMS
 				span Caravane Médicale Spécialisée
 		li.nav-item
-			a.nav-link.card.fs-7.text-dark(href= '/region/' + data.document.id +'/cms')
+			a.nav-link.card.fs-7.text-dark(href='/cms')
 				.d-flex.align-items-center
 					ion-icon.fs-6.me-2.text-1(name='information-circle-outline')
 					span.fs-7.text-dark Voir plus
