--- a/views/util/page/404.pug
+++ b/views/util/page/404.pug
@@ -6,9 +6,9 @@ block body
 				<div class="container">
 				<div class="row g-3 justify-content-center">
 					.col-12.text-center
-						span.display-4 500
+						span.display-4 404
 					.col-12.text-center
-						span= err.error
+						span Page non trouvée
 					.col-12.text-center
 						a.btn.bg-grd(href='/') retourner à la page d'accueil
 				</div>
